[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/InterfaceLayer/HUD/GameOver.gd" type="Script" id=1]
[ext_resource path="res://res/assets/backgrounds/pixel-256x256.png" type="Texture" id=2]
[ext_resource path="res://res/assets/backgrounds/pixel-256x256-4.png" type="Texture" id=3]
[ext_resource path="res://res/assets/backgrounds/pixel-256x256-3.png" type="Texture" id=4]
[ext_resource path="res://res/assets/backgrounds/pixel-256x256-2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 510, 300 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": false,
"name": "blood_wall",
"speed": 5.0
} ]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 43.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 13
custom_constants/shadow_offset_y = 13
custom_constants/shadow_as_outline = 7
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource( 1 )
passby_press = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 511.413, 302.185 )
scale = Vector2( 3.99854, 2.35769 )
frames = SubResource( 2 )
animation = "blood_wall"
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
